swager de cursos y unidades listo
