# controllers/Unidad_Controlador.go
@@ -20,6 +20,17 @@ func NewUnidadControlador(servicio *services.UnidadService) *UnidadControlador {
 }
 
 // ObtenerUnidadesPorCurso obtiene las unidades de un curso.
+// @Summary Devuelve unidades de un curso
+// @Description Devuelve una unidades de un curso en específico dado su ID
+// @Tags Unidades
+// @Accept json
+// @Produce json
+// @Param id path string true "ID del curso"
+// @Success 200 {object} response.CursoResponse
+// @Failure 400 {object} response.ErrorResponse
+// @Failure 404 {object} response.ErrorResponse
+// @Failure 500 {object} response.ErrorResponse
+// @Router /api/cursos/{id}/unidades [get]
 func (ctrl *UnidadControlador) ObtenerUnidadesPorCurso(c *gin.Context) {
 	id := c.Param("id")
 	unidades, err := ctrl.servicio.ObtenerUnidadesPorCurso(id)
@@ -31,6 +42,16 @@ func (ctrl *UnidadControlador) ObtenerUnidadesPorCurso(c *gin.Context) {
 }
 
 // CrearUnidad crea una nueva unidad y la agrega a un curso.
+// @Summary Crear unidad
+// @Description agregar una unidad a un curso
+// @Tags Unidades
+// @Param unidad body request.CreateUnidadRequest true "Unidad a crear"
+// @Param id path string true "ID del curso"
+// @Accept json
+// @Produce json
+// @Success 200 {object} response.CrearUnidad
+// @Failure 500 {object} response.ErrorResponse
+// @Router /api/cursos/{id}/unidades [post]
 func (ctrl *UnidadControlador) CrearUnidad(c *gin.Context) {
 	id := c.Param("id") // ID del curso
 	var unidad models.Unidad
